removed unneeded starter code & fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,6 @@
   
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -25,32 +19,12 @@
   
 }
 
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.home {  
+.home {    
   text-align: center;
   background-color: lightGrey;
   height: 100vh;
-  min-height: 100vh;  
-  
+  min-height: 100vh;   
 }
 
 
-/*.NavBar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
 
-.active {
-  color: green;
-}*/
